kubernetes/integration/service.yml
apiVersion: v1
kind: Service
metadata:
  name: integration-casperholders-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: integration-casperholders-app
status:
  loadBalancer: { }
